--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "isbot": "^3.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remix-island": "^0.1.2",
     "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
