--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
   ],
   "dependencies": {
     "@prisma/client": "^4.11.0",
+    "@radix-ui/colors": "^0.1.8",
     "@remix-run/node": "^1.14.3",
     "@remix-run/react": "^1.14.3",
     "@remix-run/serve": "^1.14.3",
     "@remix-run/server-runtime": "^1.14.3",
+    "@stitches/react": "^1.2.8",
     "bcryptjs": "^2.4.3",
     "isbot": "^3.6.7",
     "react": "^18.2.0",
