search works but searchbox is unusable

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -22,8 +22,6 @@
     "resolveJsonModule": true,
     "typeRoots": ["../types", "../node_modules/@types"],
 
-    "paths": {
-      "~/*": ["../app/*"]
-    }
+    "paths": {}
   }
 }
