--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.21.2",
+    "@types/lodash": "^4.14.192",
     "@types/node": "^18.15.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
