--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@prisma/client": "^4.11.0",
     "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-icons": "^1.3.0",
     "@remix-run/node": "^1.14.3",
     "@remix-run/react": "^1.14.3",
     "@remix-run/serve": "^1.14.3",
